# secure-code-execution-blueprint

./: Cargo.toml  Dockerfile  PRD.md  README.md  docker-compose.yml  improvements.md
code-exec/: Cargo.toml
code-exec-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
code-exec-server/src/: lib.rs  main.rs
code-exec/ldm/: Cargo.toml
code-exec/ldm/src/: error.rs  lib.rs  manager.rs  types.rs
code-exec/ldm/src/analyzer/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
code-exec/ldm/src/language/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
code-exec/ldm/src/package_manager/: apt.rs  brew.rs  mod.rs
code-exec/ldm/src/tests/: mod.rs
code-exec/ldm/src/tests/analyzers/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
code-exec/ldm/src/tests/installation/: mod.rs
code-exec/src/: error.rs  executor.rs  lib.rs  sandbox.rs  server.rs  service.rs  types.rs
code-exec/src/languages/: cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  rust.rs  swift.rs  typescript.rs
code-exec/src/tests/: fixtures.rs  integration.rs  mod.rs  sandbox.rs  utils.rs
code-exec/src/tests/languages/: golang.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
secure-code-execution-bin/: Cargo.toml  build.rs
secure-code-execution-bin/src/: main.rs
secure-code-execution-blueprint-bin/: Cargo.toml  build.rs
secure-code-execution-blueprint-bin/src/: main.rs
secure-code-execution-blueprint-lib/: Cargo.toml
secure-code-execution-blueprint-lib/src/: lib.rs
secure-code-execution-blueprint-lib/tests/: e2e.rs
secure-code-execution-lib/: Cargo.toml
secure-code-execution-lib/src/: lib.rs
src/: firecracker.rs  lib.rs  main.rs
tee-deploy/: Cargo.toml
tee-deploy/examples/: basic_deployment.rs
tee-deploy/src/: client.rs  config.rs  crypto.rs  error.rs  lib.rs  types.rs
tests/: e2e.rs
