[package]
name = "phala-tee-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint that deploys programs into Phala TEE cloud"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/phala-tee-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["tangle", "macros"] }

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["build"] }

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["testing", "tangle"] }
color-eyre = "0.6.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "phala-tee-blueprint-template"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "phala-tee-blueprint-template"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-phala-tee-blueprint-template-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-phala-tee-blueprint-template-gadget" },
]

[workspace]
members = [
    ".",
    "code-exec",
    "tee-deploy",
]
