[workspace]
resolver = "2"
members = ["code-exec", "code-exec/ldm", "code-exec-server", "secure-code-execution-lib", "secure-code-execution-bin"]

[workspace.package]
version = "0.1.0"
description = "A Tangle Network demonstrating a secure code execution FaaS platform"
edition = "2024"
authors = ["Tangle Network"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/secure-code-execution-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
secure-code-execution-lib = { path = "secure-code-execution-lib" }

blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", default-features = false }
tokio = { version = "1.43.0", default-features = false }
color-eyre = "0.6.3"
tower = { version = "0.5.2", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.115"
