[package]
name = "code-exec"
version = "0.1.0"
edition = "2021"
description = "A secure code execution service running in TEE environments"
license = "MIT"

[dependencies]
gadget-std = { git = "https://github.com/tangle-network/gadget", features = ["print-trace"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
tee-deploy = { path = "../tee-deploy" }
tempfile = "3.10"
which = "6.0"
regex = "1.10"
toml = "0.8"
uuid = { version = "1.7", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
nix = { version = "0.29.0", features = ["user", "resource"] }
axum = "0.8.1"
ldm = { path = "ldm" }

[dev-dependencies]
tokio-test = "0.4"
assert_fs = "1.1" 
