[package]
name = "secure-code-execution-blueprint-blueprint-lib"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
tokio = { workspace = true, features = ["macros"] }
color-eyre = { workspace = true }

[package.metadata.blueprint]
manager = { Evm = "ExperimentalBlueprint" }
master_revision = "Latest"
