[package]
name = "tee-deploy"
version = "0.1.0"
edition = "2021"
description = "A secure TEE deployment library for managing Docker containers in trusted environments"
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
curve25519-dalek = "4.1"
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
tracing = "0.1"
async-trait = "0.1"
hex = "0.4.3"
uuid = { version = "1.13.0", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = "0.4"
wiremock = "0.5" 
