[package]
name = "ldm"
version = "0.1.0"
edition = "2021"
description = "Language Dependency Manager - A robust tool installation and dependency management system"
authors = ["Tangle Network"]
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
which = "6.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
tempfile = "3.10"
retry = "2.0"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
assert_fs = "1.1"
predicates = "3.1"
mockall = "0.12"
